--- a/docker-compose_local.yaml
+++ b/docker-compose_local.yaml
@@ -10,7 +10,7 @@ services:
     container_name: logs-zookeeper
 
   logs-kafka:
-    image: wurstmeister/kafka
+    image: wurstmeister/kafka:2.11-1.1.1
     container_name: logs-kafka
     ports:
       - 9092:9092
@@ -29,16 +29,17 @@ services:
       - logs-zookeeper
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    restart: always
 
   logs-application:
     build:
       context: ./elkLogSystem
     volumes: 
-    - ./logs:/opt/logs
+      - ./logs:/opt/logs
     depends_on:
       - logs-zookeeper
       - logs-kafka
+    networks:
+      - net-logs
     ports:
       - 7080:8080
       
@@ -46,7 +47,9 @@ services:
     build:
       context: ./worker
     volumes: 
-    - ./logs:/opt/logs
+      - ./logs:/opt/logs
+    networks:
+      - net-logs
     depends_on:
       - logs-zookeeper
       - logs-kafka
