--- a/elkLogSystem/pom.xml
+++ b/elkLogSystem/pom.xml
@@ -57,6 +57,23 @@
 			<artifactId>jackson-core</artifactId>
 			<version>2.13.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aspects</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>1.8.13</version>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
 
 	<build>
