--- a/worker/src/main/resources/application.properties
+++ b/worker/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-logging.pattern.console=%-4relative [%X{CorrelationId}] [%thread] %-5level %logger{35} --- %msg %n
-logging.file.name=/home/romanov/Desktop/logs/logs.log
+logging.pattern.console=%d{"yyyy-MM-dd'T'HH:mm:ss,SSS"} [%X{RequestId}] [%X{ObjectID}] %-5level %logger{35}: %msg %n
+logging.pattern.file=%d{"yyyy-MM-dd'T'HH:mm:ss,SSS"} [%X{RequestId}] [%X{ObjectID}] %-5level %logger{35}: %msg %n
+logging.file.name=../logs/logs.log
 logging.pattern.level=%5p %mdc
 
 spring.kafka.producer.bootstrap-servers=localhost:9092
