--- a/thirdPartyApi/src/main/resources/application.properties
+++ b/thirdPartyApi/src/main/resources/application.properties
@@ -2,11 +2,4 @@ logging.pattern.console=%d{"yyyy-MM-dd'T'HH:mm:ss,SSS"} [%X{RequestId}] [%X{Obje
 logging.pattern.file=%d{"yyyy-MM-dd'T'HH:mm:ss,SSS"} [%X{RequestId}] [%X{ObjectID}] %-5level %logger{35}: %msg %n
 logging.file.name=../logs/logs.log
 logging.pattern.level=%5p %mdc
-
-spring.kafka.producer.bootstrap-servers=localhost:9092
-spring.kafka.producer.client-id=logs-module
-spring.kafka.consumer.client-id=logs-module
-spring.kafka.task.topic=task-queue
-spring.kafka.status.topic=status-queue
-
-thirdParty.api.url=http://localhost:8081/
+server.port=8081
