--- a/elkLogSystem/src/main/resources/application-docker.yml
+++ b/elkLogSystem/src/main/resources/application-docker.yml
@@ -6,6 +6,8 @@ spring:
   kafka:
     producer:
       bootstrap-servers: ${LOGS_KAFKA_SERVER:logs-kafka:9092}
+  datasource:
+    url: jdbc:postgresql://logs-postgres:5432/postgres
 
 thirdParty:
   api:
