--- a/elkLogSystem/src/main/resources/application.properties
+++ b/elkLogSystem/src/main/resources/application.properties
@@ -12,3 +12,13 @@ spring.kafka.status.topic=status-queue
 thirdParty.api.url=http://localhost:8081/
 elasticsearch.data.host=localhost
 elasticsearch.data.port=9201
+
+spring.datasource.url=jdbc:postgresql://localhost:5440/postgres
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
